RESOLVED FIXED234767
REGRESSION (r287028): Incorrect root inline box horizontal position when text-align offset is present
https://bugs.webkit.org/show_bug.cgi?id=234767
Summary REGRESSION (r287028): Incorrect root inline box horizontal position when text...
alan
Reported 2021-12-31 08:37:44 PST
ssia
Attachments
Patch (4.85 KB, patch)
2021-12-31 08:45 PST, alan
no flags
alan
Comment 1 2021-12-31 08:45:29 PST
EWS
Comment 2 2021-12-31 12:09:30 PST
Committed r287495 (245630@main): <https://commits.webkit.org/245630@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448125 [details].
Radar WebKit Bug Importer
Comment 3 2021-12-31 12:10:25 PST
Note You need to log in before you can comment on or make changes to this bug.