REGRESSION (r287028): Incorrect root inline box horizontal position when text-align offset is present https://bugs.webkit.org/show_bug.cgi?id=234767

Reviewed by Antti Koivisto.

Source/WebCore:

Display line has the content's visual left (rtl vs ltr) which should be used to position the root inline box.
We use the same offset when construcing the non-root display boxes.

Test: fast/text/root-inline-box-offset-with-text-align.html

* layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::build):

LayoutTests:

* fast/text/root-inline-box-offset-with-text-align-expected.html: Added.
* fast/text/root-inline-box-offset-with-text-align.html: Added.



Canonical link: https://commits.webkit.org/245630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287495 268f45cc-cd09-0410-ab3c-d52691b4dbfc